Fix position on IE, fix reinits on resize

--- a/src/style/sass/_index.scss
+++ b/src/style/sass/_index.scss
@@ -3,6 +3,7 @@
 }
 body {
     @extend .gray-bg;
+    margin: 0;
 }
 p {
     margin: 0;
